--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1> Odin Recipes </h1>
     <ul>
-        <li><a href="recipes/tomatosoup.html">Tomato Soup</a>/li>
+        <li><a href="recipes/tomatosoup.html">Tomato Soup</a></li>
         <li><a href="recipes/grilledcheese.html">Grilled Cheese</a></li>
         <li><a href="recipes/winewithdinner.html">Wine with Dinner</a></li>
     </ul>
